test.yml
apiVersion: v1
kind: Pod
metadata:
  name: root-pod
spec:
  containers:
  - name: nginx
    image: nginx
    securityContext:
      runAsNonRoot: false
