test1.yml
apiVersion: v1
kind: Pod
metadata:
  name: good-pod
  labels:
    app: myapp
    env: dev
spec:
  containers:
  - name: nginx
    image: nginx:1.25
    resources:
      requests:
        cpu: "100m"
      limits:
        memory: "128Mi"
