mongodb-deployment-hostpath.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb
  namespace: suwetha-ns
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
      - name: mongodb
        image: mongo:7-jammy
        ports:
        - containerPort: 27017
        resources:
          requests:
            memory: "256Mi"
            cpu: "100m"
          limits:
            memory: "512Mi"
            cpu: "200m"
        volumeMounts:
        - name: suwetha-mongodb
          mountPath: /data/db
      volumes:
      - name: suwetha-mongodb
        hostPath:
          path: /data/ust           
          type: DirectoryOrCreate

---

apiVersion: v1
kind: Service
metadata:
  name: mongodb-service
  namespace: suwetha-ns
spec:
  selector:
    app: mongodb
  ports:
  - port: 27017
    targetPort: 27017
  type: ClusterIP
