constraint.yml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sNotRoot
metadata:
  name: disallow-root
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
