imageconstraint.yml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sNoLatest
metadata:
  name: disallow-latest-tag
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod","Deployment"]
