imagetemplate.yml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: k8snolatest
spec:
  crd:
    spec:
      names:
        kind: K8sNoLatest
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8snolatest

        violation[{"msg": msg}] {
          container := input.review.object.spec.template.spec.containers[_]
          endswith(container.image, ":latest")
          msg := sprintf("Container %v uses latest tag", [container.name])
        }
