roottemplate.yml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: k8snotroot
spec:
  crd:
    spec:
      names:
        kind: K8sNotRoot
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8snotroot

        violation[{"msg": msg}] {
          input.review.object.spec.containers[_].securityContext.runAsNonRoot != true
          msg := "Containers must not run as root"
          }
